--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     />
     <!-- Load Styles -->
     <link href="css/style.css" rel="stylesheet" />
+        <script
+      src="https://kit.fontawesome.com/9848e2ba21.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
     <!-- HTML Follows BEM naming conventions 
   IDs are only used for sections to connect menu achors to sections -->
-    <div id="nav-drawer"></div>
+    
+    <i class="fas fa-bars" id="nav-drawer"></i>
     <header class="page__header">
       <nav class="navbar__menu">
         <!-- Navigation starts as empty UL that will be populated with JS -->
