--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       src="https://kit.fontawesome.com/9848e2ba21.js"
       crossorigin="anonymous"
     ></script>
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
   </head>
 
   <body>
