--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     />
     <!-- Load Styles -->
     <link href="css/style.css" rel="stylesheet" />
+        <!-- Load fontawesome -->
         <script
       src="https://kit.fontawesome.com/9848e2ba21.js"
       crossorigin="anonymous"
     ></script>
+        <!-- Load animate.css for slide-in animations-->
       <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
