edit go to top button

--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
   </head>
-
   <body>
-    <!-- HTML Follows BEM naming conventions 
-  IDs are only used for sections to connect menu achors to sections -->
-
     <i class="fas fa-bars" id="nav-drawer"></i>
     <header class="page__header">
       <nav class="navbar__menu">
@@ -145,7 +141,7 @@
         </div>
       </section>
     </main>
-         <div id="top-bu">∆</div>
+         <div id="top-bu"><i class="fas fa-angle-up"></i></div>
     <footer class="page__footer">
       <p>&copy Udacity</p>
     </footer>
